# k.chatter

./: index.html  package-lock.json  package.json
src/: App.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/model/: response.rs
src/components/: login.tsx
src/components/Chat/: chat.css  chat.tsx
src/components/Login/: login.tsx
