[package]
name = "k-chatter"
version = "0.0.1"
description = "A Tauri App"
authors = ["kt.cc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all",
    "window-unminimize",
    "window-close",
    "window-unmaximize",
    "window-start-dragging",
    "window-minimize",
    "window-maximize",
    "window-hide",
    "window-show",
    "shell-open",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
